--- a/mokstats/templates/index.html
+++ b/mokstats/templates/index.html
@@ -13,9 +13,9 @@
 		
 	
 		<div data-role="content">
-			<a href="players/" data-role="button">Spillere</a>
-			<a href="matches/" data-role="button">Kamper</a>
-			<a href="stats/" data-role="button">Morro</a>
+			<a href="./players/" data-role="button">Spillere</a>
+			<a href="./matches/" data-role="button">Kamper</a>
+			<a href="./stats/" data-role="button">Morro</a>
 		</div>
 	</div>
 {% endblock %}
