--- a/mokstats/templates/players.html
+++ b/mokstats/templates/players.html
@@ -10,9 +10,11 @@
 	
 		<div data-role="header">
 			<h1>Spillere</h1>
-			<button data-role="button" data-mini="true" data-inline="true" onclick="sortBy('played')">Most played</button>
-			<button data-role="button" data-mini="true" data-inline="true" onclick="sortBy('won')">Most wins</button>
-			<button data-role="button" data-mini="true" data-inline="true" onclick="sortBy('winp')">Highest win %</button>
+			<div>
+				<a data-role="button" data-mini="true" data-inline="true" onclick="sortBy('played')">Most played</a>
+				<a data-role="button" data-mini="true" data-inline="true" onclick="sortBy('won')">Most wins</a>
+				<a data-role="button" data-mini="true" data-inline="true" onclick="sortBy('winp')">Highest win %</a>
+			</div>
 		</div>
 		
 
