--- a/mokstats/templates/stats.html
+++ b/mokstats/templates/stats.html
@@ -8,7 +8,7 @@
 	<div data-role="page" id="foo">
 	
 		<div data-role="header">
-			<h1>M&#248;kkis statistikk > Morro</h1>
+			<h1>Morro</h1>
 		</div>
 		
 	
