--- a/mokstats/templates/stats.html
+++ b/mokstats/templates/stats.html
@@ -8,12 +8,13 @@
 	<div data-role="page" id="foo">
 	
 		<div data-role="header">
+			<a href="../" data-role="button" data-icon="home" data-iconpos="notext"></a>
 			<h1>Morro</h1>
 		</div>
 		
 	
 		<div data-role="content">
-
+			{{match}}
 		</div>
 	</div>
 {% endblock %}
