Correct navigation linking. Correct rounding of win percentage.

--- a/mokstats/templates/index.html
+++ b/mokstats/templates/index.html
@@ -11,11 +11,10 @@
 			<h1>M&#248;kkis statistikk</h1>
 		</div>
 		
-	
 		<div data-role="content">
-			<a data-role="button" onclick="slashedRelativeHref('players/')">Spillere</a>
-			<a data-role="button" onclick="slashedRelativeHref('matches/')">Kamper</a>
-			<a data-role="button" onclick="slashedRelativeHref('stats/')">Morro</a>
+			<a href="./matches/" data-role="button">Spillere</a>
+			<a href="./players/" data-role="button">Kamper</a>
+			<a href="./stats/" data-role="button">Morro</a>
 		</div>
 	</div>
 {% endblock %}
