--- a/mokstats/templates/index.html
+++ b/mokstats/templates/index.html
@@ -12,8 +12,8 @@
 		</div>
 		
 		<div data-role="content">
-			<a href="./matches/" data-role="button">Spillere</a>
-			<a href="./players/" data-role="button">Kamper</a>
+			<a href="./players/" data-role="button">Spillere</a>
+			<a href="./matches/" data-role="button">Kamper</a>
 			<a href="./stats/" data-role="button">Morro</a>
 		</div>
 	</div>
