Can filter players stats by place

--- a/mokstats/templates/matches.html
+++ b/mokstats/templates/matches.html
@@ -21,7 +21,7 @@
 
 	</script>
 	<!-- Start of first page -->
-	<div data-role="page" id="foo">
+	<div data-role="page" class="matches_page">
 	
 		<div data-role="header">
 			<a href="../" data-role="button" data-icon="home" data-iconpos="notext"></a>
