--- a/mokstats/templates/players.html
+++ b/mokstats/templates/players.html
@@ -6,10 +6,19 @@
 {% block content %}
 
 	<script>
-		$(document).ready(function() {
-		console.log($("#select_place").parents('.ui-btn'))
-		    $(".ui-selectmenu").append('<a data-role="button" data-mini="true" >Last ny side</a>').trigger( "create" );
+		
+		$(document).on('change', '.select_place', function(){
+			console.log("change");
+			var places = []; 
+			$(this).find(':selected').each(function(){ 
+				places.push($(this).val());
+			});
+			$.mobile.changePage( "./", {
+				type: "get", 
+				data: { places: places, }
+			});	
 		});
+		
 		
 		function sortBy(type) {
 			$('#players li').tsort("."+type, {order:'desc'})
@@ -17,7 +26,7 @@
 	</script>
 
 	<!-- Start of first page -->
-	<div data-role="page" id="foo">
+	<div data-role="page" id="player_page">
 	
 		<div data-role="header">
 			<a href="../" data-role="button" data-icon="home" data-iconpos="notext"></a>
@@ -46,10 +55,10 @@
 		<div data-role="footer">
 			<div data-role="fieldcontain" style="margin: 0;">
 				<label for="select_place" class="select">Sted(er):</label>
-				<select name="select_place" id="select_place" data-native-menu="false" data-inline="false" multiple>
+				<select name="select_place" class="select_place" id="select_place" data-native-menu="false" data-inline="false" multiple>
 					<option>Steder</option>
 					{% for p in places %}
-						<option value="{{p.name}}" selected>{{p.name}}</option>
+						<option value="{{p.name}}" {{p.selected}}>{{p.name}}</option>
 					{% endfor %}
 				</select>
 			</div>
