--- a/mokstats/templates/stats.html
+++ b/mokstats/templates/stats.html
@@ -5,7 +5,7 @@
 
 {% block content %}
 	<!-- Start of first page -->
-	<div data-role="page" id="foo">
+	<div data-role="page" id="stats_page">
 	
 		<div data-role="header">
 			<a href="../" data-role="button" data-icon="home" data-iconpos="notext"></a>
