--- a/mokstats/templates/index.html
+++ b/mokstats/templates/index.html
@@ -5,7 +5,7 @@
 
 {% block content %}
 	<!-- Start of first page -->
-	<div data-role="page" id="foo">
+	<div data-role="page" id="index_page">
 	
 		<div data-role="header">
 			<h1>M&#248;kkis statistikk</h1>
