--- a/mokstats/templates/players.html
+++ b/mokstats/templates/players.html
@@ -25,7 +25,7 @@
 		<div data-role="content">
 			<ul id="players" data-role="listview" data-theme="d">
 				{% for p in players %}
-				    <li><a href="../player/{{p.id}}" >
+				    <li><a href="../players/{{p.id}}/" >
 				    	<span class="ui-li-count"><span class="winp">{{p.win_perc}}</span>%</span>
 				    	{{p.name}}
 				    	<span class="smaller"> - Won <span class="won">{{p.won}}</span> of <span class="played">{{p.played}}</span></span>
