--- a/mokstats/templates/base.html
+++ b/mokstats/templates/base.html
@@ -9,6 +9,10 @@
 	<script src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
 	<script src="http://code.jquery.com/mobile/1.1.1/jquery.mobile-1.1.1.min.js"></script>
 	<script src="{{ STATIC_URL }}jquery.tinysort.min.js"></script>
+	
+	<link rel="stylesheet" href="{{ STATIC_URL }}jqplot/jquery.jqplot.min.css" />
+	<script src="{{ STATIC_URL }}jqplot/jquery.jqplot.min.js"></script>
+	<script src="{{ STATIC_URL }}jqplot/jqplot.pieRenderer.min.js"></script>
 	{% block imports %}{% endblock %}
 </head>
 <body>
