--- a/mokstats/templates/player.html
+++ b/mokstats/templates/player.html
@@ -7,9 +7,11 @@
 {% endblock %} 
 
 {% block content %}
+
+
 	
 	<!-- Start of first page -->
-	<div data-role="page" id="player_page">
+	<div data-role="page" id="player_page_{{name}}">
 	
 		<div data-role="header">
 			<a href="../../" data-role="button" data-icon="home" data-iconpos="notext"></a>
@@ -22,14 +24,34 @@
 			<div class="center_outer">
 				<div id="{{name}}_pie_graph" class="graph center_inner"></div>
 			</div>
+		
+		</div>
+		
+		<script>
+			$("#player_page_{{name}}").on('pageinit', function(){
+				/*
+				* This method is a semi-hax that attempts to init the graph in
+				* an interval until it succeds. I was unable to trigger the method
+				* at the correct time.
+				*/
+				var interval = setInterval(function(){
+					initPlayerGraph("{{ name }}", {{ played }}, {{ won }}, {{ lost }});
+					if ($("#{{ name }}_pie_graph").find('canvas').length > 0) {
+						window.clearInterval(interval);		
+					}
+				},100);
+				
+			});
 			
-			<script>
-			$(document).bind('pagecreate', function(){
-				console.log("HEREYE")
-				var other = {{ played }} - {{ won }} - {{ lost }};
-			    var s1 = [['Vunnet',{{ won }}], ['Annet',other], ['Tapt',{{ lost }}]];
-			    console.log($('#{{name}}_pie_graph'))
-			    var plot8 = $.jqplot('{{name}}_pie_graph', [s1], {
+			function initPlayerGraph(name, played, won, lost) {
+				var other = played - won - lost;
+			    var s1 = [
+			    	['Vunnet ('+won+')', won], 
+			    	['Annet ('+other+')', other],
+			    	['Tapt ('+lost+')', lost],
+			    ];
+
+			    var plot = $.jqplot(name+'_pie_graph', [s1], {
 			    	seriesColors: ['#90EE90', '#F0F03F', '#FC7E7E'],
 			        /*grid: {
 			            drawBorder: false,
@@ -54,12 +76,10 @@
 			            location: 's'
 			        }
 			    });
-			});
-
-
-			</script>
-		
-		</div>
+			}
+		</script>
 	
 	</div>
+
+
 {% endblock %}
