--- a/mokstats/templates/stats.html
+++ b/mokstats/templates/stats.html
@@ -9,12 +9,11 @@
 	
 		<div data-role="header">
 			<a href="../" data-role="button" data-icon="home" data-iconpos="notext"></a>
-			<h1>Morro</h1>
+			<h1>Rundestatistikk</h1>
 		</div>
 		
 	
 		<div data-role="content">
-			{{match}}
 		</div>
 	</div>
 {% endblock %}
