--- a/mokstats/templates/stats.html
+++ b/mokstats/templates/stats.html
@@ -9,7 +9,7 @@
 	
 		<div data-role="header">
 			<a href="../" data-role="button" data-icon="home" data-iconpos="notext"></a>
-			<h1>Rundestatistikk</h1>
+			<h1>Runder</h1>
 		</div>
 		
 	
@@ -45,7 +45,11 @@
 					<h3><span class="icon icon_solit_lines left"></span><span class="text left">Kabal</span></h3>
 					<p>
 						<ul>
-							<li>as</li>
+							<li>H&oslashyeste antall strek i en runde av <a href="../players/{{solitaire_lines.worst.pid}}/">{{solitaire_lines.worst.pname}}</a> med {{solitaire_lines.worst.sum}} strek.</li>
+							<li>Gjennomsnitt av antal strek hvis man fikk en eller flere er {{solitaire_lines.average}} strek.</li>
+							<li>H&oslashyeste antall kort igjen i en runde av <a href="../players/{{solitaire_cards.worst.pid}}/">{{solitaire_cards.worst.pname}}</a> med {{solitaire_cards.worst.sum}} kort.</li>
+							<li>Gjennomsnitt av antal kort hvis man satt igjen med et eller flere er {{solitaire_cards.average}} kort.</li>
+							<li>D&aringrligste runde av <a href="../players/{{solitaire_total.worst.pid}}/">{{solitaire_total.worst.pname}}</a> med {{solitaire_total.worst.sum}} poeng.</li>
 						</ul>
 					</p>
 				</div>
@@ -53,8 +57,9 @@
 				<div data-role="collapsible">
 					<h3><span class="icon icon_pass left"></span><span class="text left">Pass</span></h3>
 					<p>
+						<div>Pass er en runde der maximum/minimum kan oppn&arings, derfor representerer best/d&aringrligst hvem som <b>f&oslashrst</b> fikk poengsummen. </div>
 						<ul>
-							<li>as</li>
+							<li>D&aringrligste runde av <a href="../players/{{pass.worst.pid}}/">{{pass.worst.pname}}</a> med {{pass.worst.sum}} poeng.</li>
 						</ul>
 					</p>
 				</div>
@@ -62,8 +67,9 @@
 				<div data-role="collapsible">
 					<h3><span class="icon icon_grand left"></span><span class="text left">Grand</span></h3>
 					<p>
+						<div>Grand er en runde der maximum/minimum kan oppn&arings, derfor representerer best/d&aringrligst hvem som <b>f&oslashrst</b> fikk poengsummen. </div>
 						<ul>
-							<li>as</li>
+							<li>Beste runde av <a href="../players/{{grand.best.pid}}/">{{grand.best.pname}}</a> med -{{grand.best.sum}} poeng.</li>
 						</ul>
 					</p>
 				</div>
@@ -71,17 +77,21 @@
 				<div data-role="collapsible">
 					<h3><span class="icon icon_trumph left"></span><span class="text left">Trumf</span></h3>
 					<p>
+						<div>Trumf er en runde der maximum/minimum kan oppn&arings, derfor representerer best/d&aringrligst hvem som <b>f&oslashrst</b> fikk poengsummen. </div>
 						<ul>
-							<li>as</li>
+							<li>Beste runde av <a href="../players/{{trumph.best.pid}}/">{{trumph.best.pname}}</a> med -{{trumph.best.sum}} poeng.</li>
 						</ul>
 					</p>
 				</div>
 				
 				<div data-role="collapsible">
-					<h3><span class="icon icon_sum left"></span><span class="text left">Sum</span></h3>
+					<h3><span class="icon icon_sum left"></span><span class="text left">Totalt</span></h3>
 					<p>
 						<ul>
-							<li>as</li>
+							<li>Beste kamp av <a href="../players/{{total.best.pid}}/">{{total.best.pname}}</a> med {{total.best.sum}} poeng.</li>
+							<li>Neste beste kamp av <a href="../players/{{total.second.pid}}/">{{total.second.pname}}</a> med {{total.second.sum}} poeng.</li>
+							<li>Tredje beste kamp av <a href="../players/{{total.third.pid}}/">{{total.third.pname}}</a> med {{total.third.sum}} poeng.</li>
+							<li>D&aringrligste kamp av <a href="../players/{{total.worst.pid}}/">{{total.worst.pname}}</a> med {{total.worst.sum}} poeng.</li>
 						</ul>
 					</p>
 				</div>
