--- a/mokstats/templates/stats.html
+++ b/mokstats/templates/stats.html
@@ -22,9 +22,8 @@
 					<p>
 						<div>Spar er en runde der maximum/minimum kan oppn&arings, derfor representerer best/d&aringrligst hvem som <b>f&oslashrst</b> fikk poengsummen. </div>
 						<ul>
-							<li>Beste runde av <a href="../players/{{spades.best.pid}}/">{{spades.best.pname}}</a> med {{spades.best.sum}} poeng.</li>
-							<li>D&aringrligste runde av <a href="../players/{{spades.worst.pid}}/">{{spades.worst.pname}}</a> med {{spades.worst.sum}} poeng.</li>
-							<li>Gjennomsnitt hvis man fikk spar er {{spades.average}} poeng.</li>
+							<li>D&aringrligste runde: <a href="../players/{{spades.worst.pid}}/">{{spades.worst.pname}}</a> med {{spades.worst.sum}} poeng.</li>
+							<li>Gjennomsnitt hvis man fikk spar: {{spades.average}} poeng.</li>
 						</ul>
 					</p>
 				</div>
@@ -34,9 +33,8 @@
 					<p>
 						<div>Damer er en runde der maximum/minimum kan oppn&arings, derfor representerer best/d&aringrligst hvem som <b>f&oslashrst</b> fikk poengsummen. </div>
 						<ul>
-							<li>Beste runde av <a href="../players/{{queens.best.pid}}/">{{queens.best.pname}}</a> med {{queens.best.sum}} poeng.</li>
-							<li>D&aringrligste runde av <a href="../players/{{queens.worst.pid}}/">{{queens.worst.pname}}</a> med {{queens.worst.sum}} poeng.</li>
-							<li>Gjennomsnitt hvis man fikk spar er {{queens.average}} poeng.</li>
+							<li>D&aringrligste runde: <a href="../players/{{queens.worst.pid}}/">{{queens.worst.pname}}</a> med {{queens.worst.sum}} poeng.</li>
+							<li>Gjennomsnitt hvis man fikk spar: {{queens.average}} poeng.</li>
 						</ul>
 					</p>
 				</div>
@@ -45,11 +43,11 @@
 					<h3><span class="icon icon_solit_lines left"></span><span class="text left">Kabal</span></h3>
 					<p>
 						<ul>
-							<li>H&oslashyeste antall strek i en runde av <a href="../players/{{solitaire_lines.worst.pid}}/">{{solitaire_lines.worst.pname}}</a> med {{solitaire_lines.worst.sum}} strek.</li>
-							<li>Gjennomsnitt av antal strek hvis man fikk en eller flere er {{solitaire_lines.average}} strek.</li>
-							<li>H&oslashyeste antall kort igjen i en runde av <a href="../players/{{solitaire_cards.worst.pid}}/">{{solitaire_cards.worst.pname}}</a> med {{solitaire_cards.worst.sum}} kort.</li>
-							<li>Gjennomsnitt av antal kort hvis man satt igjen med et eller flere er {{solitaire_cards.average}} kort.</li>
-							<li>D&aringrligste runde av <a href="../players/{{solitaire_total.worst.pid}}/">{{solitaire_total.worst.pname}}</a> med {{solitaire_total.worst.sum}} poeng.</li>
+							<li>H&oslashyeste antall strek i en runde: <a href="../players/{{solitaire_lines.worst.pid}}/">{{solitaire_lines.worst.pname}}</a> med {{solitaire_lines.worst.sum}} strek.</li>
+							<li>Gjennomsnitt av antal strek hvis man fikk en eller flere: {{solitaire_lines.average}} strek.</li>
+							<li>H&oslashyeste antall kort igjen i en runde: <a href="../players/{{solitaire_cards.worst.pid}}/">{{solitaire_cards.worst.pname}}</a> med {{solitaire_cards.worst.sum}} kort.</li>
+							<li>Gjennomsnitt av antal kort hvis man satt igjen med et eller flere: {{solitaire_cards.average}} kort.</li>
+							<li>D&aringrligste runde: <a href="../players/{{solitaire_total.worst.pid}}/">{{solitaire_total.worst.pname}}</a> med {{solitaire_total.worst.sum}} poeng.</li>
 						</ul>
 					</p>
 				</div>
@@ -59,7 +57,7 @@
 					<p>
 						<div>Pass er en runde der maximum/minimum kan oppn&arings, derfor representerer best/d&aringrligst hvem som <b>f&oslashrst</b> fikk poengsummen. </div>
 						<ul>
-							<li>D&aringrligste runde av <a href="../players/{{pass.worst.pid}}/">{{pass.worst.pname}}</a> med {{pass.worst.sum}} poeng.</li>
+							<li>D&aringrligste runde: <a href="../players/{{pass.worst.pid}}/">{{pass.worst.pname}}</a> med {{pass.worst.sum}} poeng.</li>
 						</ul>
 					</p>
 				</div>
@@ -69,7 +67,7 @@
 					<p>
 						<div>Grand er en runde der maximum/minimum kan oppn&arings, derfor representerer best/d&aringrligst hvem som <b>f&oslashrst</b> fikk poengsummen. </div>
 						<ul>
-							<li>Beste runde av <a href="../players/{{grand.best.pid}}/">{{grand.best.pname}}</a> med -{{grand.best.sum}} poeng.</li>
+							<li>Beste runde: <a href="../players/{{grand.best.pid}}/">{{grand.best.pname}}</a> med -{{grand.best.sum}} poeng.</li>
 						</ul>
 					</p>
 				</div>
@@ -79,7 +77,7 @@
 					<p>
 						<div>Trumf er en runde der maximum/minimum kan oppn&arings, derfor representerer best/d&aringrligst hvem som <b>f&oslashrst</b> fikk poengsummen. </div>
 						<ul>
-							<li>Beste runde av <a href="../players/{{trumph.best.pid}}/">{{trumph.best.pname}}</a> med -{{trumph.best.sum}} poeng.</li>
+							<li>Beste runde: <a href="../players/{{trumph.best.pid}}/">{{trumph.best.pname}}</a> med -{{trumph.best.sum}} poeng.</li>
 						</ul>
 					</p>
 				</div>
@@ -88,10 +86,10 @@
 					<h3><span class="icon icon_sum left"></span><span class="text left">Totalt</span></h3>
 					<p>
 						<ul>
-							<li>Beste kamp av <a href="../players/{{total.best.pid}}/">{{total.best.pname}}</a> med {{total.best.sum}} poeng.</li>
-							<li>Neste beste kamp av <a href="../players/{{total.second.pid}}/">{{total.second.pname}}</a> med {{total.second.sum}} poeng.</li>
-							<li>Tredje beste kamp av <a href="../players/{{total.third.pid}}/">{{total.third.pname}}</a> med {{total.third.sum}} poeng.</li>
-							<li>D&aringrligste kamp av <a href="../players/{{total.worst.pid}}/">{{total.worst.pname}}</a> med {{total.worst.sum}} poeng.</li>
+							<li>Beste kamp: <a href="../players/{{total.best.pid}}/">{{total.best.pname}}</a> med {{total.best.sum}} poeng.</li>
+							<li>Neste beste kamp: <a href="../players/{{total.second.pid}}/">{{total.second.pname}}</a> med {{total.second.sum}} poeng.</li>
+							<li>Tredje beste kamp: <a href="../players/{{total.third.pid}}/">{{total.third.pname}}</a> med {{total.third.sum}} poeng.</li>
+							<li>D&aringrligste kamp: <a href="../players/{{total.worst.pid}}/">{{total.worst.pname}}</a> med {{total.worst.sum}} poeng.</li>
 						</ul>
 					</p>
 				</div>
