--- a/mokstats/templates/index.html
+++ b/mokstats/templates/index.html
@@ -15,6 +15,7 @@
 			<a href="./players/" data-role="button">Spillere</a>
 			<a href="./matches/" data-role="button">Kamper</a>
 			<a href="./stats/" data-role="button">Runder</a>
+			<a href="./rating/" data-role="button">Rating</a>
 		</div>
 	</div>
 {% endblock %}
